<resources>
    <string name="app_name" translatable="false">Voive</string>
    <string name="home">Home</string>
    <string name="Search">Search</string>
    <string name="adult_conformation">This table talk contains adult content . would you like to listen this content ?</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="attach_docs">Attach document</string>
    <string name="docs">Docs</string>
    <string name="upload">Upload</string>
    <string name="start_first_backroom">Start Your First Backroom Talk</string>
    <string name="Rules">Rules</string>
    <string name="you_not_have_internet">Looks Like You Not Have A Internet Connection.Kindly Check Your Internet Connection</string>
    <string name="and_be_part_of_them">and,be part of them</string>
    <string name="Search_Voive">Search Voive</string>
    <string name="i_under">I Understand</string>
    <string name="click_add_to_cat">Click On ➕ Button To Add Conversations Category Of Table.</string>
    <string name="greeting_to_people">You are welcome on Voive. Voive is an Indian and indigenous app. The purpose of this app is to Collect The Normal and Daily Conversation Done By Indian People On A Daily Basis.So You Can Easily Relate To It . and take part in any conversations.So what\'s the delay start using voive</string>
    <string name="Search_for_conv">Search For Conversation</string>
    <string name="mo_body_on_voive">Looks like nobody in touch with you talks on Voive. Click on the share button above and invite the people of your life</string>
    <string name="you_are_offline">You\'re Offline</string>
    <string name="some_file_info">Some Comment (OPTIONAL)</string>
    <string name="get_conv_in7_lng">Conversations In %1$s</string>
    <string name="fifty_veri_a_day">Initially we are doing only 50 registrations per day. because we are in beta version now</string>
    <string name="Voice_Map">Voice Map</string>
    <string name="phone_book_des">See which people you know well. who talks on Voive</string>
    <string name="show_conv_on_map">See Conversation On Map</string>
    <string name="play_back_speed">Set Playback speed</string>
    <string name="global_starting_chat">We Start Your Global Chat With Latest 20 Messages.</string>
    <string name="About">About</string>
    <string name="Server_error">Server Down</string>
    <string name="Server_error_des">Sorry For Inconvenience Voive Server Is Under Maintenance . It may take some times so be patience :)</string>
    <string name="Already_Req">Already Requested</string>
    <string name="Allow_to_send_invite">Allow Other People To Send Invitation To You</string>
    <string name="Recent_Listened">Recent</string>
    <string name="Share_location">Share Location</string>
    <string name="Your_Phone">Phone Number</string>
    <string name="CONVO">Conversations</string>
    <string name="Tap_here">Tap Here</string>
    <string name="to_listen_conv">To Listen\nConversations</string>
    <string name="Sync_Contacts">Sync Contacts</string>
    <string name="allow_invi">Allow Invitations</string>
    <string name="tap_up_to_see_inv">Tap Here To See Who Sends You Invitation For Taking Part In Conversation</string>
    <string name="AUTO_GENRATED_DES_NEWS">News | This Table Is Auto Generated By Voive . In This Table . You Can Listen And Stream About Latest and Breaking News.</string>
    <string name="AUTO_GENRATED_DES_BOOK">Books &amp; Information | This Table Is Auto Generated By Voive . In This Table . You Can Listen And Stream and share your knowledge about books and any other information.</string>
    <string name="AUTO_GENRATED_DES_POLITICS">Politics | This Table Is Auto Generated By Voive . In This Table . You Can Listen And Stream current situations and issues of politics.</string>
    <string name="AUTO_GENRATED_DES_SCI">Science &amp; Tech | This Table Is Auto Generated By Voive . In This Table . You Can Listen And Stream new technologies facts and information about science.</string>
    <string name="AUTO_GENRATED_DES_ART">Arts &amp; Entertainment | This Table Is Auto Generated By Voive . In This Table . You Can Listen And Stream about arts,skills,about entertainment.</string>
    <string name="AUTO_GENRATED_DES_BSN">Business | This Table Is Auto Generated By Voive . In This Table . You Can Listen And Stream about facts and information about business share your knowledge about business to other peoples.</string>
    <string name="AUTO_GENRATED_DES_HEALTH">Health &amp; Beauty | This Table Is Auto Generated By Voive . In This Table . You Can Listen And Stream about tips and information about daily health and beauty tips and hacks.</string>
    <string name="no_recent_conv">No Recent Conversations. Tap Bottom Button To Find Conversations</string>
    <string name="Get_shorter_side">Get A Swipeable Side Of Conversation Called Sneaks</string>
    <string name="WAITING">Waiting</string>
    <string name="We_support_india_only">Right now we only support Indian phone numbers</string>
    <string name="table_not_contain_rules">This Table Does\'nt Contain Any Rules.</string>
    <string name="invitation_to_join">Request to join</string>
    <string name="which_lng_des">Specified in which language You Like To Speak and Listen conversation</string>
    <string name="Request_to_subscribe">Request To Subscribe</string>
    <string name="starting_slogan">Discover Live Audio Stream of What People Are Talking About, Here Is Some Table Suggested By You From Voive.</string>
    <string name="LET_GO">Let\'s go</string>
    <string name="My_TASTE">My Taste</string>
    <string name="get_conv_list_on_map">Get Conversation List On Map . Just Tap Any Of These To Start Listening</string>
    <string name="Listening">Listening</string>
    <string name="ALLOW_SNEAKING">Allow Sneaking</string>
    <string name="Alias_name">Alias Name</string>
    <string-array name="languages_option">
        <item>All</item>
        <item>Hindi</item>
        <item>English</item>
        <item>Tamil</item>
        <item>Telugu</item>
        <item>Punjabi</item>
        <item>Gujarati</item>
        <item>Marathi</item>
        <item>Bengali</item>
    </string-array>
    <string-array name="cat_option">
        <item>News</item>
        <item>Gossips</item>
        <item>Unions</item>
        <item>Food</item>
        <item>Panchayat</item>
        <item>Devotional</item>
        <item>Arts &amp; Entertainment</item>
        <item>Health &amp; Beauty</item>
        <item>Science &amp; Tech</item>
        <item>Politics</item>
        <item>Business</item>
        <item>Books &amp; Information</item>
        <item>Storytelling</item>
        <item>Travelling</item>


    </string-array>
    <string name="Categories">Categories</string>
    <string name="when_bla_start_speaking">Click Notify To Get Notification When %1$s! start speaking.</string>
    <string name="Allow_perm_to_voive">Allow Voive to access your locations. so that it can work properly. and provides the perfect conversation for you</string>
    <string name="Allow">Allow</string>
    <string name="arts_enter">Arts &amp; Entertainment</string>
    <string name="food">Food</string>
    <string name="get_cat_conv">Categorised Conversation</string>
    <string name="health_beauty">Health &amp; Beauty</string>
    <string name="sci_tech">Science &amp; Tech</string>
    <string name="Politics">Politics</string>
    <string name="Buisness">Business</string>
    <string name="News">News</string>
    <string name="Books_Information">Books &amp; Information</string>
    <string name="Storytelling">Storytelling</string>
    <string name="Travelling">Travelling</string>
    <string name="Devotional">Devotional</string>
    <string name="Panchayat">Panchayats</string>
    <string name="Unions">Unions</string>
    <string name="gossips">Household Conversations</string>
    <string name="shuffle_play">SHUFFLE PLAY</string>
    <string name="Timing">Timing</string>
    <string name="Description">Description</string>
    <string name="EDIT">Edit</string>
    <string name="speaking_language">Speaking Language</string>
    <string name="Tap_To_Chat">Tap On  ➕  Button To Start A New Private Conversation , beside your\'s public talks</string>
    <string name="Blog">Blog</string>
    <string name="invitation_limit">You can only send 100 invitations at a time</string>
    <string name="BIO">Bio</string>
    <string name="Streaming">Streaming</string>
    <string name="Username">Username</string>
    <string name="auth_client" translatable="false">6Phl0hAI7MTWAs9PLuPO8FtezzudwZVK</string>
    <string name="auth_domain" translatable="false">dev-ymyqlmzu.us.auth0.com</string>
    <string name="Send_too">Send to...</string>
    <string name="leave_talk">Leave talk</string>
    <string name="ALLOW_SNEAKING_DES">If you enable it, people can see where your table\'s conversations happening. on Voice Map</string>
    <string name="SEARCH_PEOPLES_IN_TABLE">Search People In This Table</string>
    <string name="search_fro_tables_">Search People or tables</string>
    <string name="NO_Rules">No Rules</string>
    <string name="Allow_media_des">Allow Subscibers to upload photos or videos to Chat</string>
    <string name="Allow_media">Allow Media</string>
    <string name="talk_on_trend">Talks on trend</string>
    <string name="TLK_TOPICS">Talking Topics</string>
    <string name="ONLINE">Online</string>
    <string name="P_LIKE_TO_LISTEN">These are the topics in which people like to listen and talk a lot.</string>
    <string name="Discv">Discover</string>
    <string name="WHAT_YOU_WANT_TO_LISTEN">What You Want To Listen...</string>
    <string name="EXPLORE">Explore</string>
    <string name="enter_email_that_linked">Enter The Email Which Is Linked With Your Account.</string>
    <string name="KICK">Kick</string>
    <string name="start_table_together">Start a table</string>
    <string name="sneaking_time">Sneaking time</string>
    <string name="mutual_tables">Mutual Tables</string>
    <string name="DIVE_INTO_GLOBAL">Dive Into Global</string>
    <string name="VIEW_RULES">View Rules</string>
    <string name="everyone_can_talk">Everyone can talk</string>
    <string name="who_can_open_mic_or_not">Everyone can open their mic and speak</string>
    <string name="people_must_have_invitation">To join the table. People will need to get the approval of You.</string>
    <string name="only_co_creator_invite_other_people">Only You can invite other people. and People Need Your invitation For Subscription.</string>
    <string name="section_title">Section title</string>
    <string name="corridor_rules">Welcome to corridor here you can chat with different strangers people Globally . So Be Nice While Chatting</string>
    <string name="what_people_talking_about">Welcome to Voive. Our effort is to organize every voice of India. So what are you waiting for, click on any of these tables
        to listen and talk.And be a part of our endeavor</string>
    <string name="get_personalised_conversation">Get More Personalised Conversation.Here Is List Of Conversation That Going On Near You :)</string>
    <string name="nearby_conv">Nearby Conversation</string>
    <string name="TLKING_TITLE">Conversation\'s Title ?</string>
    <string name="SPECEFIE_TITLE">Tell your audience what topic they are talking about</string>
    <string name="ban">Ban </string>
    <string name="deactivate">Deactivate</string>
    <string name="are_you_sure_to_deactivate">Are you sure you want to disable your account . if you disable your account no one can see or interact with your account</string>
    <string name="deactivate_account">Deactivate account</string>
    <string name="Done">Done</string>
    <string name="visit_profile">Visit profile</string>
    <string name="Listen">Listen</string>
    <string name="appoint_as_co_creator">Promote As Co-Moderator</string>
</resources>