<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="32dp"
    android:background="@drawable/alert_box_background"
    android:stateListAnimator="@null">



    <TextView
        android:id="@+id/deactivate_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montr_extrabold"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/Discv"
        android:textAlignment="center"
        android:textColor="@color/themetextcolor"
        android:textSize="32sp" />


    <TextView
        android:id="@+id/deactivate_message_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:lineSpacingExtra="2dp"
        android:fontFamily="@font/montr_semi"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/what_people_talking_about"
        android:textAlignment="center"
        android:textColor="@color/themetextsecondarycolor"
        android:textSize="15sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/deactivate"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:backgroundTint="#2633634D"
        android:fontFamily="@font/montr_bold"
        android:elevation="0dp"
        android:letterSpacing="0.05626"
        android:paddingStart="24dp"
        android:paddingTop="6dp"
        app:elevation="0dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp"
        android:text="@string/Listen"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:cornerRadius="24dp"
        app:rippleColor="@android:color/transparent" />

</LinearLayout>