<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/bg_rounded_bottom_sheet"
    android:layout_height="wrap_content">



    <com.google.android.material.button.MaterialButton
        android:layout_width="35dp"
        android:layout_height="16dp"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:backgroundTint="@color/searchboxbackcolor"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ban_text"
        android:text="@string/SPECEFIE_TITLE"
        android:fontFamily="@font/montr_bold"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        android:layout_marginEnd="16dp"
        android:textColor="@color/themetextsecondarycolor"/>





    <EditText
        android:id="@+id/table_descripton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/TLKING_TITLE"
        android:inputType="textMultiLine"
        android:lines="2"
        android:maxLines="2"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:letterSpacing="0.02"
        android:minLines="1"
        android:background="@drawable/both_top_and_bottom_radius"
        android:maxLength="100"
        android:paddingStart="24dp"
        android:paddingTop="6dp"
        android:paddingEnd="24dp"
        android:layout_marginTop="24dp"
        android:paddingBottom="8dp"
        android:scrollbars="vertical"
        android:textAlignment="center"
        android:textColor="@color/themetextcolor"
        android:textColorHint="@color/hintcolor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/banned"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/montr_bold"
        android:imeOptions="actionDone"
        android:letterSpacing="0.000002652"
        android:paddingStart="24dp"
        android:layout_marginTop="24dp"
        android:paddingTop="4dp"
        android:paddingEnd="24dp"
        android:paddingBottom="7dp"
        android:text="@string/Done"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:cornerRadius="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginBottom="20dp"
        android:background="@color/divider_color" />
</LinearLayout>