<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/alert_box_background"
    android:stateListAnimator="@null">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_voicemap_filled"
        android:id="@+id/image"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/deactivate_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montr_extrabold"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/nearby_conv"
        android:textAlignment="center"
        android:textColor="@color/themetextcolor"
        android:textSize="23sp" />


    <TextView
        android:id="@+id/deactivate_message_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montr_bold"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/get_personalised_conversation"
        android:textAlignment="center"
        android:textColor="@color/themetextsecondarycolor"
        android:textSize="15sp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:id="@+id/note"
        android:visibility="gone"
        android:textAlignment="center"
        android:layout_marginEnd="24dp"
        android:text="NOTE - We Are Currently Support In India Only.So We Support Indian Map Only"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/themetextsecondarycolor"
        android:textSize="12sp"/>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingStart="24dp"
        android:layout_gravity="center"
        android:paddingEnd="24dp"
        android:paddingBottom="32dp"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LET_GO"
            android:fontFamily="@font/montr_bold"
            android:textAllCaps="false"
            android:letterSpacing="0.0002626"
            android:backgroundTint="#2633634D"
            android:textSize="18sp"
            android:paddingTop="8dp"
            android:paddingStart="32dp"
            android:paddingEnd="24dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorAccent"
            app:cornerRadius="24dp"
            android:id="@+id/deactivate"
            android:layout_weight="1"
            app:rippleColor="@android:color/transparent"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:paddingBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>



    </LinearLayout>

</LinearLayout>